--- a/src/components/SearchInput/SearchInput.module.scss
+++ b/src/components/SearchInput/SearchInput.module.scss
@@ -1,5 +1,28 @@
 @import "/src/styles/theme.scss";
 
+@keyframes shake {
+  10%,
+  90% {
+    transform: translateX(-1px);
+  }
+
+  20%,
+  80% {
+    transform: translateX(2px);
+  }
+
+  30%,
+  50%,
+  70% {
+    transform: translateX(-4px);
+  }
+
+  40%,
+  60% {
+    transform: translateX(4px);
+  }
+}
+
 .wrapper {
   position: relative;
   display: flex;
@@ -14,7 +37,7 @@
 
   padding: 0 16px;
 
-  color: $textOnSurface;
+  color: #bfbfbf;
   background-color: $background;
 
   pointer-events: none;
@@ -36,6 +59,11 @@
   background-color: $secondary;
   color: $primary;
   border-radius: 0 $borderRadius $borderRadius 0;
+
+  &:disabled {
+    background-color: transparent;
+    color: $secondary;
+  }
 }
 
 .input {
@@ -70,7 +98,6 @@
 }
 
 .notFound {
-}
-
-.successful {
+  composes: wrapper;
+  animation: shake 0.82s cubic-bezier(0.36, 0.07, 0.19, 0.97) both;
 }
