--- a/src/containers/Home/Home.module.scss
+++ b/src/containers/Home/Home.module.scss
@@ -1,11 +1,16 @@
 @import "/src/styles/theme.scss";
 
 .container {
-  min-height: 100vh;
+  flex: 1;
   padding: 0 0.5rem;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
-  background-color: $background;
+  max-width: $containerMaxWidth;
+}
+
+.paragraph {
+  font-size: 32px;
+  line-height: 150%;
 }
