:sparkles: created git hub user search form

--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -10,5 +10,8 @@
 
   box-shadow: $boxShadow;
   border-radius: $borderRadius;
-  padding: 40px 32px 16px;
+  padding: 16px;
+
+  width: 100%;
+  max-width: 300px;
 }
