--- a/src/components/RepoItem/RepoItem.module.scss
+++ b/src/components/RepoItem/RepoItem.module.scss
@@ -1,5 +1,17 @@
 @import "/src/styles/theme.scss";
 
+@keyframes bottomToUp {
+  0% {
+    opacity: 0;
+    transform: translateY(100%);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translateY(0%);
+  }
+}
+
 .repo {
   list-style: none;
   display: flex;
@@ -16,4 +28,6 @@
   &:hover {
     filter: brightness(75%);
   }
+
+  animation: bottomToUp 0.3s ease-in-out both;
 }
