:iphone: fixed mobile behaviors

--- a/src/components/Avatar/Avatar.module.scss
+++ b/src/components/Avatar/Avatar.module.scss
@@ -2,6 +2,11 @@
 
 .avatar {
   border-radius: $borderRadius;
+  max-width: 215px;
+
+  @media screen and (min-width: $containerMaxWidth) {
+    max-width: unset;
+  }
 }
 
 .withBorder {
